# datadog-sync-cli

./: '  .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE-3rdparty.csv  README.md  RELEASING.md  config  pyproject.toml  pytest.ini  requirements.in  setup.cfg  setup.py  tox.ini
.github/: CODEOWNERS  dependabot.yml
.github/chainguard/: self.prepare-release.create-pr.sts.yaml  self.release.create-release.sts.yaml
.github/workflows/: build_and_pub_arm_test.yml  build_publish_docker.yml  build_publish_docker_arm.yml  build_publish_multiarch.yml  changelog.yml  datadog_test_optimization.yml  prepare_release.yml  release.yml  test.yaml  test.yml  test_integrations.yml
datadog_sync/: cli.py  constants.py  utils.py  version.py
datadog_sync/commands/: __init__.py  _import.py  destroy.py  diff.py  diffs.py  migrate.py  prune.py  reset.py  sync.py
datadog_sync/commands/shared/: __init__.py  options.py  utils.py
datadog_sync/model/: authn_mappings.py  aws_integrations.py  aws_logs_integrations.py  base_resource.py  dashboard.py  dashboard_json.py  dashboard_lists.py  dashboards.py  downtime.py  downtime_schedules.py  downtimes.py  host_tags.py  incident_org_settings.py  incidents.py  incidents_config_fields.py  incidents_config_integrations_workflows.py  incidents_config_notifications_templates.py  incidents_integrations.py  incidents_todos.py  integration_aws.py  integrations.py  integrations_aws.py  integrations_slack_channels.py  logs_archives.py  logs_archives_order.py  logs_custom_destinations.py  logs_custom_pipeline.py  logs_custom_pipelines.py  logs_facets.py  logs_indexes.py  logs_indexes_order.py  logs_integration_pipelines.py  logs_metrics.py  logs_pipeline_order.py  logs_pipelines.py  logs_pipelines_order.py  logs_restriction_queries.py  logs_views.py  metric_configurations.py  metric_metadatas.py  (+32 more)
datadog_sync/models/: __init__.py
datadog_sync/shared/: options.py
datadog_sync/shared_options/: options.py
datadog_sync/utils/: base_resource.py  config.py  configuration.py  connect_resources.py  custom_client.py  filter.py  graph_manager.py  helpers.py  import_state.py  log.py  ndjson.py  queue_manager.py  resource_utils.py  resources_handler.py  resources_manager.py  retry.py  source_state_writer.py  state.py  storage.py  sync_report.py  workers.py
datadog_sync/utils/storage/: _base_storage.py  aws_s3_bucket.py  azure_blob_container.py  gcs_bucket.py  local_file.py  state.py  storage.py  storage_types.py
docs/: synthetics-private-locations.md
resources/source/: dashboards.json  roles.json
scripts/: build.py  build_requirements.txt  cleanup_org.py  test_requirements.txt
specs/: AWS_INTEGRATIONS_SPEC.md
tests/: conftest.py
tests/integration/: conftest.py  helpers.py  test_cli.py  test_import.py  test_resource_per_file.py  test_resources.py
tests/integration/cassettes/test_cli/: TestCli.test_cleanup.frozen  TestCli.test_cleanup.yaml  TestCli.test_import.frozen  TestCli.test_import.yaml  TestCli.test_import_verify_ddr_status_failure.frozen  TestCli.test_import_verify_ddr_status_failure.yaml  TestCli.test_import_without_verify_ddr_status.frozen  TestCli.test_import_without_verify_ddr_status.yaml  TestCli.test_migrate.frozen  TestCli.test_migrate.yaml  TestCli.test_migrate_without_verify_ddr_status.frozen  TestCli.test_migrate_without_verify_ddr_status.yaml  TestCli.test_sync.frozen  (+13 more)
tests/integration/resources/: test_authn_mappings.py  test_dashboard_lists.py  test_dashboards.py  test_downtime_schedules.py  test_downtimes.py  test_host_tags.py  test_incidents.py  test_integrations.py  test_logs_archives.py  test_logs_archives_order.py  test_logs_custom_pipelines.py  test_logs_indexes.py  test_logs_indexes_order.py  test_logs_integration_pipelines.py  test_logs_metrics.py  test_logs_pipelines.py  test_logs_pipelines_order.py  test_logs_restriction_queries.py  test_metric_configurations.py  test_metric_percentiles.py  test_metric_tag_configurations.py  test_metrics_metadata.py  test_monitors.py  test_notebooks.py  test_powerpacks.py  test_resource_per_file_dashboards.py  test_resource_per_file_monitors.py  test_restriction_policies.py  test_restriction_policies_skip_paths.py  test_roles.py  test_rum_applications.py  test_security_monitoring_rules.py  test_sensitive_data_sanner_groups.py  test_sensitive_data_sanner_rules.py  test_sensitive_data_scanner_groups_order.py  test_service_level_objectives.py  test_slo_corrections.py  test_spans_metrics.py  test_synthetics_global_variable.py  test_synthetics_mobile_applications.py  (+7 more)
tests/unit/: conftest.py  test_apply_resource_connection_error.py  test_apply_summary_handler.py  test_apply_summary_ids.py  test_authn_mappings_id_file.py  test_aws_s3_bucket.py  test_azure_blob_container.py  test_base_resource.py  test_custom_client_timeout.py  test_custom_client_trust_env.py  test_dashboards.py  test_dependency_graph.py  test_downtime_schedules.py  test_downtime_schedules_include_created_by.py  test_drop_unresolvable_principals_cli.py  test_failure_class.py  test_filters.py  test_force_missing_dependencies_cli.py  test_gcs_bucket.py  test_get_resources_by_ids_experiment.py  test_helpers_command_building.py  test_host_tags.py  test_id_file_subprocess_experiment.py  test_import_force_missing_deps.py  test_import_state.py  test_log.py  test_logs_archives.py  test_logs_pipelines.py  test_logs_restriction_queries.py  test_map_existing_resources.py  test_max_concurrent_semaphore.py  test_max_workers_per_type.py  test_metrics_metadata.py  test_minimize_reads_id_targeted.py  test_minimize_reads_type_scoped.py  test_monitor_error_logging.py  test_monitors.py  test_notebooks.py  test_notebooks_error_formatting.py  test_overload_backoff.py  (+26 more)
tests/unit/model/: test_integrations.py
tests/utils/: helpers.py
(+686 files in other folders)
