# Unless explicitly stated otherwise all files in this repository are licensed
# under the 3-clause BSD style license (see LICENSE).
# This product includes software developed at Datadog (https://www.datadoghq.com/).
# Copyright 2019 Datadog, Inc.

[metadata]
name = datadog-sync-cli
description = Datadog cli tool to sync resources across organizations.
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    datadog-sync
author = Datadog
author_email = packages@datadoghq.com
url = https://github.com/DataDog/datadog-sync-cli
license = BSD 3-clause
platforms = any
classifiers=
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
project_urls =
    Bug Tracker = https://github.com/DataDog/datadog-sync-cli/issues
    Source Code = https://github.com/DataDog/datadog-sync-cli


[options]
packages = find:
include_package_data = True
python_requires = >=3.7
install_requires =
    click==7.1.2
    click-config-file==0.6.0
    requests==2.25.1
    deepdiff==5.5.0
setup_requires =
    setuptools>=56.0.0

[options.entry_points]
console_scripts =
    datadog-sync=datadog_sync.cli:cli

[options.extras_require]
apm =
    ddtrace==0.50.3
tests =
    black>=20.8b1
    pytest>=5.2.4
    pytest-black
    pytest-console-scripts
    pytest-recording
