# Unless explicitly stated otherwise all files in this repository are licensed
# under the 3-clause BSD style license (see LICENSE).
# This product includes software developed at Datadog (https://www.datadoghq.com/).
# Copyright 2019 Datadog, Inc.

[metadata]
name = datadog-sync-cli
description = Datadog cli tool to sync resources across organizations.
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    datadog-sync
author = Datadog
author_email = packages@datadoghq.com
url = https://github.com/DataDog/datadog-sync-cli
license = BSD 3-clause
platforms = any
classifiers=
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
project_urls =
    Bug Tracker = https://github.com/DataDog/datadog-sync-cli/issues
    Source Code = https://github.com/DataDog/datadog-sync-cli


[options]
packages = find:
include_package_data = True
python_requires = >=3.9
install_requires =
    click==8.1.3
    configobj==5.0.8
    requests==2.28.2
    deepdiff==6.2.3
setup_requires =
    setuptools>=67.6.0

[options.entry_points]
console_scripts =
    datadog-sync=datadog_sync.cli:cli

[options.extras_require]
tests =
    ddtrace==1.9.3
    black==23.1.0
    pytest>=7.2.2
    pytest-black
    pytest-console-scripts
    pytest-recording
    python-dateutil
